Handle sonarqube warnings